// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render with default props 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .c1 {
  line-height: 30px;
  font-size: 1.4rem;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
}

.c0 img {
  width: 30px;
  height: 30px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .c1 {
  line-height: 60px;
  font-size: 2.4rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
}

.c0 img {
  width: 60px;
  height: 60px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size and image 1`] = `
.c0 {
  display: inline-block;
  text-align: center;
  width: 120px;
  height: 120px;
  border-radius: 50%;
  overflow: hidden;
  color: #fafafa;
  background: #bdbdbd;
}

.c0 .sc-AykKC {
  line-height: 120px;
  font-size: 4.8rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
}

.c0 img {
  width: 120px;
  height: 120px;
  object-fit: cover;
}

<div>
  <div
    class="c0"
  >
    <img
      src="http://dummurl"
    />
  </div>
</div>
`;
